# subxt-ntf-example

./: Cargo.toml
src/: main.rs
