[package]
name = "subxt-nft-parachain"
version = "0.1.0"
edition = "2021"

[dependencies]
scale-value = "0.16.2"
subxt = "0.37.0"
subxt-signer = "0.37.0"
tokio = { version = "1.39.3", features = ["full"] }
pallet-nfts = "31.0.0"
tracing = "0.1.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }